--- a/JNB1-Initial_configrations.ipynb
+++ b/JNB1-Initial_configrations.ipynb
@@ -145,7 +145,7 @@
    "id": "7bc61c0b",
    "metadata": {},
    "source": [
-    "Makeìing the output folder"
+    "Making the output folder"
    ]
   },
   {
