--- a/JNB1-Initial_configrations.ipynb
+++ b/JNB1-Initial_configrations.ipynb
@@ -52,6 +52,44 @@
   {
    "attachments": {},
    "cell_type": "markdown",
+   "id": "2ccb7fd9",
+   "metadata": {},
+   "source": [
+    "## Settings"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "86f609fe",
+   "metadata": {},
+   "source": [
+    "In this section, we define the constants and generators that will be used throughout the notebook:\n",
+    "\n",
+    "* `MAIN_DIR_JNB1`: The main folder where the results of this Jupyter Notebook will be stored.\n",
+    "* `CHEM_FORMULA`: The chemical formula of the SEI component.\n",
+    "* `SEED`: The seed number used for the random number generator.\n",
+    "* `pcg64`: The random number generator (PCG64).\n",
+    "\n",
+    "These constants and generators play a crucial role in ensuring reproducibility and providing the necessary inputs for various computations and simulations in this notebook."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "id": "f139a15f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tools.misc import MAIN_DIR_JNB1\n",
+    "\n",
+    "CHEM_FORMULA = \"LiF\"\n",
+    "SEED = 2718"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
    "id": "0352be92",
    "metadata": {},
    "source": [
@@ -86,46 +124,7 @@
     "from tools.mp import get_crystals, load_cifs\n",
     "\n",
     "matget2ase = AseAtomsAdaptor()\n",
-    "plt.style.use(\"default\")"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "id": "2ccb7fd9",
-   "metadata": {},
-   "source": [
-    "## Settings"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "id": "86f609fe",
-   "metadata": {},
-   "source": [
-    "In this section, we define the constants and generators that will be used throughout the notebook:\n",
-    "\n",
-    "* `MAIN_DIR_JNB1`: The main folder where the results of this Jupyter Notebook will be stored.\n",
-    "* `CHEM_FORMULA`: The chemical formula of the SEI component.\n",
-    "* `SEED`: The seed number used for the random number generator.\n",
-    "* `pcg64`: The random number generator (PCG64).\n",
-    "\n",
-    "These constants and generators play a crucial role in ensuring reproducibility and providing the necessary inputs for various computations and simulations in this notebook."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 149,
-   "id": "f139a15f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from tools.misc import MAIN_DIR_JNB1\n",
-    "\n",
-    "CHEM_FORMULA = \"LiF\"\n",
-    "SEED = 2718\n",
-    "\n",
+    "plt.style.use(\"default\")\n",
     "pcg64 = PCG64(seed=SEED)\n",
     "rg = Generator(pcg64)"
    ]
