--- a/JNB2-Simulations.ipynb
+++ b/JNB2-Simulations.ipynb
@@ -10,67 +10,44 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "id": "6da68a58",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "72c600d6",
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2"
+    "Welcome to this Jupyter Notebook, where we will run the DFT simulation. \n",
+    "\n",
+    "This notebook represents the second step of the protocol discussed in the associated article (see the README.md file) as illustrated in the Figure 2 below.\n",
+    "\n",
+    "The notebook is organized into sections based on the type of manipulations applied to the crystals. Here is an overview of the sections:\n",
+    "\n",
+    "* [Unit Cells `Single Point`](#unit_cells_sp) \n",
+    "* [Unit Cell `Geometry Optimization` ](#unit_cells_go) \n",
+    "* [Pure Species `Single Point`](#pure_species_sp)\n",
+    "* [Pure Species `Geometry Optimization`](#pure_species_go)\n",
+    "* [Supercells `Single Point`](#supercells_sp)\n",
+    "* [Supercells `Geometry Optimization`](#supercells_go)\n",
+    "* [Strain `Single Poin`](#strain_sp)\n",
+    "* [Vacancies `Single Poin`](#vacancies_sp)\n",
+    "* [Substitution `Single Poin`](#substitution_sp)\n",
+    "* [Interstitial `Pre Optimization`](#interstitial_sp) \n",
+    "* [Interstitial `Geopmetry Optimization` ](#interstitial_go)\n",
+    "* [Slab `PRE Optimization`](#slab_po) \n",
+    "* [Slabs `Geopmetry Optimization` ](#slab_go)\n",
+    "* [Amorphous `ab initio MD`](#amorphous_aimd_) \n",
+    "* [Amorphous `Single Point`](#amorphous_sp) \n",
+    "* [Bulk 300 K `ab initio MD`](#300_aimd) \n",
+    "* [Bulk 300 K `Single Point`](#300_sp)\n",
+    "* [Bulk 500 K `ab initio MD`](#500_aimd) \n",
+    "* [Bulk 500 K `Single Point`](#500_sp)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 27,
-   "id": "904118a7-4cd2-4f7d-8012-adb331fca768",
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import glob\n",
-    "import os\n",
-    "import pickle\n",
-    "import sys\n",
-    "\n",
-    "import matplotlib as mp\n",
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "\n",
-    "# import matplotlib.gridspec as gridspec\n",
-    "# import scipy as sci\n",
-    "import scm.plams as scm\n",
-    "from ase.visualize import view\n",
-    "from pymatgen.core import Structure\n",
-    "from pymatgen.io.ase import AseAtomsAdaptor\n",
-    "from scm.plams.interfaces.molecule.ase import fromASE, toASE\n",
-    "\n",
-    "from tools import make_dir\n",
-    "from tools.misc import mtx2str\n",
-    "\n",
-    "# from ase.visualize import view\n",
-    "# from pymatgen.ext.matproj import MPRester\n",
-    "\n",
-    "\n",
-    "# from shutil import copyfile\n",
-    "\n",
-    "\n",
-    "matget2ase = AseAtomsAdaptor()\n",
-    "\n",
-    "# MPKEY = 'zDsCbuRTjVMusXLvJ54h'\n",
-    "# MAIN_DIR = 'trainset_sim'\n",
-    "# ALLSIM_DIR = os.path.join(MAIN_DIR_JNB2, CHEM_FORMULA,  'output_all')\n",
-    "# IC_DIR = 'trainset_ic'\n",
-    "# make_dir(MAIN_DIR)\n",
-    "# make_dir(ALLSIM_DIR)\n",
-    "plt.style.use(\"default\")"
+    "<figure>\n",
+    "    <img src=\"assets/img/wf-JNB2.png\" alt=\"JNB2 workflow\">\n",
+    "    <figcaption><strong>Figure 2</strong>: Protocol workflow and part covered by this Jupyter Notebook highlighted in red.<figcaption>\n",
+    "<figure> "
    ]
   },
   {
@@ -98,27 +75,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "72a5e2bf-e3e3-4be1-9397-a070d3ab4f03",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'1.5.1'"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from tools.misc import MAIN_DIR_JNB1, MAIN_DIR_JNB2\n",
     "\n",
-    "CHEM_FORMULA = \"LiF\"\n",
+    "CHEM_FORMULA = \"LiF\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load libraries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "904118a7-4cd2-4f7d-8012-adb331fca768",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import glob\n",
+    "import os\n",
+    "import pickle\n",
     "\n",
-    "scm.__version__"
+    "import matplotlib as mp\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import scm.plams as scm\n",
+    "from ase.visualize import view\n",
+    "from pymatgen.core import Structure\n",
+    "from pymatgen.io.ase import AseAtomsAdaptor\n",
+    "from scm.plams.interfaces.molecule.ase import fromASE, toASE\n",
+    "\n",
+    "from tools import make_dir\n",
+    "from tools.misc import mtx2str\n",
+    "\n",
+    "matget2ase = AseAtomsAdaptor()\n",
+    "\n",
+    "plt.style.use(\"default\")"
    ]
   },
   {
@@ -149,7 +149,7 @@
     "tags": []
    },
    "source": [
-    "## Unit Cells `Single Point`"
+    "## Unit Cells `Single Point` <a id='unit_cells_sp'></a>"
    ]
   },
   {
@@ -431,7 +431,7 @@
     "    Na = len(job_result.get_molecule(\"Molecule\").atoms)\n",
     "    energy_per_atom = energy / Na\n",
     "    results_df.loc[sim_name[3:] + \".cif\", \"scm_energy_per_atom_SP\"] = energy_per_atom\n",
-    "results_df.to_json(os.path.join(RUN_DIR, f\"results.json\"))"
+    "results_df.to_json(os.path.join(RUN_DIR, \"results.json\"))"
    ]
   },
   {
@@ -575,7 +575,7 @@
     "tags": []
    },
    "source": [
-    "## Unit Cell `Geometry Optimization`"
+    "## Unit Cell `Geometry Optimization` <a id='unit_cells_go'></a>"
    ]
   },
   {
@@ -852,7 +852,7 @@
     "dir_jobs = os.path.join(RUN_DIR, \"jobs\")\n",
     "\n",
     "prev_sim = os.path.join(MAIN_DIR_JNB2, CHEM_FORMULA, \"0-UnitCell_SP\")\n",
-    "data_path = os.path.join(prev_sim, f\"results.json\")\n",
+    "data_path = os.path.join(prev_sim, \"results.json\")\n",
     "results_df = pd.read_json(data_path)"
    ]
   },
@@ -871,7 +871,7 @@
     "    Na = len(job_result.get_molecule(\"Molecule\").atoms)\n",
     "    energy_per_atom = energy / Na\n",
     "    results_df.loc[sim_name[3:] + \".cif\", \"scm_energy_per_atom_GO\"] = energy_per_atom\n",
-    "results_df.to_json(os.path.join(RUN_DIR, f\"results.json\"))"
+    "results_df.to_json(os.path.join(RUN_DIR, \"results.json\"))"
    ]
   },
   {
@@ -1029,7 +1029,7 @@
     "tags": []
    },
    "source": [
-    "## Pure Species `Single Point`"
+    "## Pure Species `Single Point` <a id='pure_species_sp'></a>"
    ]
   },
   {
@@ -1308,7 +1308,7 @@
     "    Na = len(job_result.get_molecule(\"Molecule\").atoms)\n",
     "    energy_per_atom = energy / Na\n",
     "    results_df.loc[sim_name[3:] + \".cif\", \"scm_energy_per_atom_SP\"] = energy_per_atom\n",
-    "results_df.to_json(os.path.join(RUN_DIR, f\"results.json\"))"
+    "results_df.to_json(os.path.join(RUN_DIR, \"results.json\"))"
    ]
   },
   {
@@ -1450,7 +1450,7 @@
     "tags": []
    },
    "source": [
-    "## Pure Species `Geometry Optimization`"
+    "## Pure Species `Geometry Optimization` <a id='pure_species_go'></a>"
    ]
   },
   {
@@ -1718,7 +1718,7 @@
     "dir_jobs = os.path.join(RUN_DIR, \"jobs\")\n",
     "\n",
     "prev_sim = os.path.join(MAIN_DIR_JNB2, CHEM_FORMULA, \"0.1-PureSpeices_SP\")\n",
-    "data_path = os.path.join(prev_sim, f\"results.json\")\n",
+    "data_path = os.path.join(prev_sim, \"results.json\")\n",
     "results_df = pd.read_json(data_path)"
    ]
   },
@@ -1737,7 +1737,7 @@
     "    Na = len(job_result.get_molecule(\"Molecule\").atoms)\n",
     "    energy_per_atom = energy / Na\n",
     "    results_df.loc[sim_name[3:] + \".cif\", \"scm_energy_per_atom_GO\"] = energy_per_atom\n",
-    "results_df.to_json(os.path.join(RUN_DIR, f\"results.json\"))"
+    "results_df.to_json(os.path.join(RUN_DIR, \"results.json\"))"
    ]
   },
   {
@@ -1891,7 +1891,7 @@
     "tags": []
    },
    "source": [
-    "## Supercells `Single Point`"
+    "## Supercells `Single Point` <a id='supercells_sp'></a>"
    ]
   },
   {
@@ -2275,7 +2275,7 @@
     "    energy_per_atom = energy / Na\n",
     "    results_df.loc[sim_name[3:] + \".cif\", \"energy_per_atom_SP\"] = energy_per_atom\n",
     "\n",
-    "results_df.to_json(os.path.join(RUN_DIR, f\"results.json\"))"
+    "results_df.to_json(os.path.join(RUN_DIR, \"results.json\"))"
    ]
   },
   {
@@ -2436,7 +2436,7 @@
    "id": "75e61cb0-e87f-48f5-8c1b-f8a5e8a0a02a",
    "metadata": {},
    "source": [
-    "## Supercells `Geometry Optimization`"
+    "## Supercells `Geometry Optimization`  <a id='supercells_go'></a>"
    ]
   },
   {
@@ -2844,7 +2844,7 @@
     "    energy_per_atom = energy / Na\n",
     "    results_df.loc[sim_name[3:] + \".cif\", \"energy_per_atom_GO\"] = energy_per_atom\n",
     "\n",
-    "results_df.to_json(os.path.join(RUN_DIR, f\"results.json\"))"
+    "results_df.to_json(os.path.join(RUN_DIR, \"results.json\"))"
    ]
   },
   {
@@ -3017,7 +3017,7 @@
    "id": "1f9ab8c1-5c5c-43de-a3c0-f145dae0b96b",
    "metadata": {},
    "source": [
-    "## Strain `Single Poin`"
+    "## Strain `Single Poin` <a id='strain_sp'></a>"
    ]
   },
   {
@@ -3215,7 +3215,7 @@
     "            print(f\"sim {sim_name} FAILE will rerun it\")\n",
     "        else:\n",
     "            continue\n",
-    "    job = scm.AMSJob(molecule=system_obj, settings=settings, name=sim_name)\n",
+    "    job = scm.AMSJob(molecule=system_obj, settings=settings_2_SP, name=sim_name)\n",
     "    job.settings.runscript.pre = f\"\"\"module use --append /work/pr1u1751/pr1u1751/shared/modules\n",
     "module load ams/2022.102\n",
     "\n",
@@ -3329,7 +3329,7 @@
     "    )\n",
     "    results_df.loc[sim_name[3:] + \".cif\", \"von_mises_strain\"] = von_mises_strain\n",
     "    results_df.loc[sim_name[3:] + \".cif\", \"vol\"] = mol.get_volume()\n",
-    "results_df.to_json(os.path.join(RUN_DIR, f\"results.json\"))"
+    "results_df.to_json(os.path.join(RUN_DIR, \"results.json\"))"
    ]
   },
   {
@@ -3616,7 +3616,7 @@
     "tags": []
    },
    "source": [
-    "## Vacancies `Single Poin`"
+    "## Vacancies `Single Poin` <a id='vacancies_sp'></a>"
    ]
   },
   {
@@ -3800,12 +3800,12 @@
     "    sim_name = f\"{TASK}-{name}\"\n",
     "    job_dir = os.path.join(RUN_DIR, \"jobs\", sim_name)\n",
     "    if os.path.exists(job_dir):\n",
-    "        job = scm.AMSJob.load_external(job_dir, settings=settings)\n",
+    "        job = scm.AMSJob.load_external(job_dir, settings=settings_3_SP)\n",
     "        if not job.check():\n",
     "            print(f\"sim {sim_name} FAILE will rerun it\")\n",
     "        else:\n",
     "            continue\n",
-    "    job = scm.AMSJob(molecule=system_obj, settings=settings, name=sim_name)\n",
+    "    job = scm.AMSJob(molecule=system_obj, settings=settings_3_SP, name=sim_name)\n",
     "    job.settings.runscript.pre = f\"\"\"module use --append /work/pr1u1751/pr1u1751/shared/modules\n",
     "module load ams/2022.102\n",
     "export OMP_NUM_THREADS={CPUS_PER_CORE}\n",
@@ -4027,7 +4027,7 @@
     "    results_df.loc[sim_name[3:] + \".cif\", \"scm_energy_per_atom\"] = energy_per_atom\n",
     "    results_df.loc[sim_name[3:] + \".cif\", \"system_id\"] = int(sim_name.split(\"-\")[2])\n",
     "\n",
-    "results_df.to_json(os.path.join(RUN_DIR, f\"results.json\"))"
+    "results_df.to_json(os.path.join(RUN_DIR, \"results.json\"))"
    ]
   },
   {
@@ -4216,7 +4216,7 @@
     "tags": []
    },
    "source": [
-    "## Substitution `Single Poin`"
+    "## Substitution `Single Poin` <a id='substitution_sp'></a>"
    ]
   },
   {
@@ -4593,7 +4593,7 @@
     "    results_df.loc[sim_name[3:] + \".cif\", \"scm_energy_per_atom\"] = energy_per_atom\n",
     "    results_df.loc[sim_name[3:] + \".cif\", \"system_id\"] = int(sim_name.split(\"-\")[2])\n",
     "\n",
-    "results_df.to_json(os.path.join(RUN_DIR, f\"results.json\"))"
+    "results_df.to_json(os.path.join(RUN_DIR, \"results.json\"))"
    ]
   },
   {
@@ -4784,7 +4784,7 @@
     "tags": []
    },
    "source": [
-    "## Interstitial `Pre Optimization`"
+    "## Interstitial `Pre Optimization` <a id='interstitial_sp'></a>"
    ]
   },
   {
@@ -5222,7 +5222,7 @@
     "    results_df.loc[sim_name[3:] + \".cif\", \"scm_PO_energy_per_atom\"] = energy_per_atom\n",
     "    results_df.loc[sim_name[3:] + \".cif\", \"system_id\"] = int(sim_name.split(\"-\")[2])\n",
     "\n",
-    "results_df.to_json(os.path.join(RUN_DIR, f\"results.json\"))\n",
+    "results_df.to_json(os.path.join(RUN_DIR, \"results.json\"))\n",
     "results_df.to_json(os.path.join(conf_dir, \"info.json\"))"
    ]
   },
@@ -5420,7 +5420,7 @@
     "tags": []
    },
    "source": [
-    "## Interstitial `Geopmetry Optimization`"
+    "## Interstitial `Geopmetry Optimization` <a id='interstitial_go'></a>"
    ]
   },
   {
@@ -5875,7 +5875,7 @@
     "    results_df.loc[sim_name[3:] + \".cif\", \"scm_energy_per_atom\"] = energy_per_atom\n",
     "    results_df.loc[sim_name[3:] + \".cif\", \"system_id\"] = int(sim_name.split(\"-\")[2])\n",
     "\n",
-    "results_df.to_json(os.path.join(RUN_DIR, f\"results.json\"))"
+    "results_df.to_json(os.path.join(RUN_DIR, \"results.json\"))"
    ]
   },
   {
@@ -6092,7 +6092,7 @@
    "id": "be7c923e-a186-4a08-b6fe-127f8ece42c3",
    "metadata": {},
    "source": [
-    "## Slab `PRE Optimization`"
+    "## Slab `PRE Optimization`  <a id='slab_po'></a>"
    ]
   },
   {
@@ -6575,7 +6575,7 @@
     "    results_df.loc[sim_name[3:] + \".cif\", \"scm_PO_energy_per_atom\"] = energy_per_atom\n",
     "    results_df.loc[sim_name[3:] + \".cif\", \"system_id\"] = int(sim_name.split(\"-\")[2])\n",
     "\n",
-    "results_df.to_json(os.path.join(RUN_DIR, f\"results.json\"))\n",
+    "results_df.to_json(os.path.join(RUN_DIR, \"results.json\"))\n",
     "results_df.to_json(os.path.join(conf_dir, \"info.json\"))"
    ]
   },
@@ -6789,7 +6789,7 @@
     "tags": []
    },
    "source": [
-    "## Slabs `Geopmetry Optimization`"
+    "## Slabs `Geopmetry Optimization`  <a id='slab_go'></a>"
    ]
   },
   {
@@ -6998,7 +6998,7 @@
     "jobs = []\n",
     "for name, system_obj in systems:\n",
     "    sim_name = f\"{TASK}-{name}\"\n",
-    "    job = scm.AMSJob(molecule=system_obj, settings=settings, name=sim_name)\n",
+    "    job = scm.AMSJob(molecule=system_obj, settings=settings_6_GO, name=sim_name)\n",
     "    job.settings.runscript.pre = \"\"\"module use --append /work/pr1u1751/pr1u1751/shared/modules\n",
     "module load ams/2022.102\"\"\"\n",
     "    jobs.append(job)\n",
@@ -7283,7 +7283,7 @@
     "    results_df.loc[sim_name[3:] + \".cif\", \"scm_energy_per_atom\"] = energy_per_atom\n",
     "    results_df.loc[sim_name[3:] + \".cif\", \"system_id\"] = int(sim_name.split(\"-\")[2])\n",
     "\n",
-    "results_df.to_json(os.path.join(RUN_DIR, f\"results.json\"))"
+    "results_df.to_json(os.path.join(RUN_DIR, \"results.json\"))"
    ]
   },
   {
@@ -7515,7 +7515,7 @@
     "tags": []
    },
    "source": [
-    "## Amorphous `ab initio MD`"
+    "## Amorphous `ab initio MD` <a id='amorphous_aimd'></a>"
    ]
   },
   {
@@ -7906,7 +7906,7 @@
     "    )\n",
     "\n",
     "results_df = pd.concat([results_df, temp_df], axis=1)\n",
-    "results_df.to_json(os.path.join(RUN_DIR, f\"results.json\"))"
+    "results_df.to_json(os.path.join(RUN_DIR, \"results.json\"))"
    ]
   },
   {
@@ -8261,7 +8261,7 @@
     "tags": []
    },
    "source": [
-    "## Amorphous `Single Point`"
+    "## Amorphous `Single Point` <a id='amorphous_sp'></a>"
    ]
   },
   {
@@ -8702,7 +8702,7 @@
     "    energy_per_atom = energy / Na\n",
     "    results_df.loc[sim_name[3:] + \".cif\", \"energy_per_atom_SP\"] = energy_per_atom\n",
     "\n",
-    "results_df.to_json(os.path.join(RUN_DIR, f\"results.json\"))"
+    "results_df.to_json(os.path.join(RUN_DIR, \"results.json\"))"
    ]
   },
   {
@@ -8729,7 +8729,7 @@
    "id": "a0d16106",
    "metadata": {},
    "source": [
-    "## Bulk 300 K `ab initio MD`"
+    "## Bulk 300 K `ab initio MD` <a id='300_aimd'></a>"
    ]
   },
   {
@@ -9101,7 +9101,7 @@
     "    )\n",
     "\n",
     "results_df = pd.concat([results_df, temp_df], axis=1)\n",
-    "results_df.to_json(os.path.join(RUN_DIR, f\"results.json\"))"
+    "results_df.to_json(os.path.join(RUN_DIR, \"results.json\"))"
    ]
   },
   {
@@ -9441,7 +9441,7 @@
    "id": "1dac2df4",
    "metadata": {},
    "source": [
-    "## Bulk 300 K `Single Point`"
+    "## Bulk 300 K `Single Point` <a id='300_sp'></a>"
    ]
   },
   {
@@ -9854,7 +9854,7 @@
     "    energy_per_atom = energy / Na\n",
     "    results_df.loc[sim_name[3:] + \".cif\", \"energy_per_atom_SP\"] = energy_per_atom\n",
     "\n",
-    "results_df.to_json(os.path.join(RUN_DIR, f\"results.json\"))"
+    "results_df.to_json(os.path.join(RUN_DIR, \"results.json\"))"
    ]
   },
   {
@@ -9881,7 +9881,7 @@
    "id": "3b0a04db",
    "metadata": {},
    "source": [
-    "## Bulk 500 K `ab initio MD`"
+    "## Bulk 500 K `ab initio MD` <a id='500_aimd'></a>"
    ]
   },
   {
@@ -10253,7 +10253,7 @@
     "    )\n",
     "\n",
     "results_df = pd.concat([results_df, temp_df], axis=1)\n",
-    "results_df.to_json(os.path.join(RUN_DIR, f\"results.json\"))"
+    "results_df.to_json(os.path.join(RUN_DIR, \"results.json\"))"
    ]
   },
   {
@@ -10593,7 +10593,7 @@
    "id": "3a8d009f",
    "metadata": {},
    "source": [
-    "## Bulk 500 K `Single Point`"
+    "## Bulk 500 K `Single Point` <a id='500_sp'></a>"
    ]
   },
   {
@@ -11006,7 +11006,7 @@
     "    energy_per_atom = energy / Na\n",
     "    results_df.loc[sim_name[3:] + \".cif\", \"energy_per_atom_SP\"] = energy_per_atom\n",
     "\n",
-    "results_df.to_json(os.path.join(RUN_DIR, f\"results.json\"))"
+    "results_df.to_json(os.path.join(RUN_DIR, \"results.json\"))"
    ]
   },
   {
